# to-do-list-FastAPI

./: .dockerignore  .gitignore  README.md  docker-compose-pytest.yml  docker-compose.yml  pyproject.toml
backend/: alembic_autogenerate.py  pyproject.toml  run.py
backend/app/: __init__.py  config.py  constants.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/auth/: jwt.py
backend/app/api/v1/classifiers/: __init__.py  crud.py  schemas.py  views.py
backend/app/api/v1/dependencies/: jwt.py  tasks.py  users.py
backend/app/api/v1/tasks/: __init__.py  crud.py  schemas.py  views.py
backend/app/api/v1/users/: __init__.py  crud.py  schemas.py  views.py
backend/app/db/: __init__.py  db_helper.py
backend/app/db/models/: classifiers.py  mixins.py  tasks.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_migration.py  0002_data_migration.py
backend/tests/: conftest.py  constants.py  functions.py  test_users_api.py
config/: .env.template
docker/dev/api/: Dockerfile
src/: alembic_autogenerate.py  config.py  run.py
src/app/core/: config.py
src/app/models/: base.py  users.py
src/migrations/: env.py
src/migrations/versions/: 0001_initial_migration.py  0002_data_migration.py
