[tool.poetry]
name = "to-do-list-fastapi"
version = "0.1.0"
description = ""
authors = ["Denis Maslennikov <ktotom7@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = {extras = ["standart"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic-config = "^0.3.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
